# weave

./: .clang-format  .devcontainer.json  .gitignore  CMakeLists.txt  README.md  conanfile.py
docs/: Doxyfile
include/hc/project/: hello.h
src/hc/project/: CMakeLists.txt  hello.cpp
test/component/: CMakeLists.txt
test/unit/: CMakeLists.txt  TestProject.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
